# ce-iam

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  ceapp.toml
.github/workflows/: ci.yml
crates/ce-iam/: Cargo.toml
crates/ce-iam-core/: Cargo.toml
crates/ce-iam-core/src/: attestation.rs  device.rs  lib.rs  secrets.rs  trust.rs
crates/ce-iam-core/tests/: golden_secrets.rs
crates/ce-iam-core/tests/fixtures/: gen_secrets_vectors.mjs  secrets_vectors.json
crates/ce-iam/examples/: delegate.rs
crates/ce-iam/src/: audit.rs  authkv.rs  bridge.rs  error.rs  grant.rs  kv_store.rs  lib.rs  main.rs  nodeauth.rs  revocation.rs  store.rs  wallet.rs
crates/ce-iam/tests/: store.rs
docs/: MERGE.md  leif-directives-verbatim.md  real-world-identity.md
e2e/: README.md  lib-fleet.sh  security-e2e.sh
examples/: delegate.rs  managed.rs
src/: catalog.rs  grant.rs  lib.rs  main.rs  policy.rs  principal.rs  revocation.rs  roots.rs
tests/: catalog.rs  cli.rs  integration.rs  prop_attenuation.rs
