[package]
name = "ce-iam"
version = "0.1.0"
edition = "2024"
description = "IAM/identity-and-access as a managed product over ce-cap: AWS-IAM-ish principals, roles, and policies mapped onto signed, attenuating CE capability chains."
license = "MIT"
authors = ["Leif Rydenfalk <ledamecrydenfalk@gmail.com>"]
repository = "https://github.com/ce-net/ce-iam"
keywords = ["ce", "iam", "capabilities", "authorization", "p2p"]
categories = ["authentication", "api-bindings"]

[[bin]]
name = "ce-iam"
path = "src/main.rs"

[lib]
name = "ce_iam"
path = "src/lib.rs"

[dependencies]
# CE substrate (by path, per task).
ce-cap = { path = "../ce/crates/ce-cap" }
ce-identity = { path = "../ce/crates/ce-identity" }
ce-rs = { path = "../ce-rs" }

anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
# Standard data-dir discovery (matches the CE node layout).
directories = "5"
# CLI + async runtime (binary only, but cheap to depend on).
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# Raw HTTP for the one endpoint ce-rs does not wrap (POST /capabilities/revoke).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
proptest = "1"
